<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="8sp"
            android:text="@string/help_text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-3dp" />

        <Button
            android:id="@+id/portrait_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portrait"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="39dp" />

        <Button
            android:id="@+id/landscape_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landscape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="111dp" />

        <Button
            android:id="@+id/sensor_portrait_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_portrait"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="183dp" />

        <Button
            android:id="@+id/sensor_landscape_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_landscape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="247dp" />

        <Button
            android:id="@+id/reverse_portrait_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reverse_portrait"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="321dp" />

        <Button
            android:id="@+id/reverse_landscape_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reverse_landscape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="401dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>